# logging-formatter-anticrlf

./: LICENSE  MANIFEST  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: endorlabs.yml
anticrlf/: __init__.py  types.py
anticrlf/tests/: test_formatter.py
