[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name='logging-formatter-anticrlf'
version='1.2.1'
license= { text = 'BSD-2-clause' }
authors = [ 
    { name = 'Darren P Meyer', email = 'darren@darrenpmeyer.com'}, 
]
description='Python logging Formatter for CRLF Injection (CWE-93 / CWE-117) prevention'

[project.urls]
home='https://github.com/darrenpmeyer/logging-formatter-anticrlf'

[project.optional-dependencies]
dev = ["tox>=3.8.0", "pytest"]

[tool.setuptools]
packages=['anticrlf']
